[metadata]
name = dandi
url = http://dandiarchive.org
author = DANDI developers
author_email = team@dandiarchive.org
maintainer = Yaroslav O. Halchenko
maintainer_email = debian@onerussian.com
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
license = Apache 2.0
description = Command line client for interaction with DANDI archive elements
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
project_urls =
    Source Code = https://github.com/dandi/dandi-cli
    Documentation = https://dandi.readthedocs.io

[options]
python_requires = >=3.7
install_requires =
    appdirs
    bidsschematools
    click
    click-didyoumean
    dandischema ~= 0.7.0
    etelemetry >= 0.2.2
    fasteners
    fscacher
    # Specifying != might be what causes pip 19.3.1 first to install hdmf 1.5.1
    # which is incompatible with pynwb 1.1.2 and only complain instead of installing
    # pinned by pynwb version.
    #hdmf != 1.1.2
    humanize
    importlib-metadata;  python_version < "3.8"
    interleave ~= 0.1
    joblib
    keyring
    keyrings.alt
    packaging
    pycryptodomex  # for EncryptedKeyring backend in keyrings.alt
    pydantic >= 1.9.0
    pynwb >= 1.0.3,!=1.1.0
    nwbinspector >= 0.3.8
    pyout >=0.5, !=0.6.0
    python-dateutil
    requests ~= 2.20
    ruamel.yaml >=0.15, <1
    semantic-version
    tenacity
    zarr ~= 2.10
zip_safe = False
packages = find_namespace:
include_package_data = True

[options.packages.find]
include = dandi*

[options.extras_require]
# I bet will come handy
#doc =
#    matplotlib >= 1.3.1
#    numpydoc
#    sphinx >=0.3
# PyNWB extensions we know and somewhat care about
# e.g. import whenever pynwb fails without them
extensions =
    allensdk
extras =
    duecredit
style =
    flake8
    pre-commit
test =
    anys ~= 0.2
    coverage
    opencv-python
    pytest
    pytest-cov
    pytest-mock
    responses
tools=
    boto3
all =
    #%(doc)s
    %(extensions)s
    %(extras)s
    %(style)s
    %(test)s
    %(tools)s

[options.entry_points]
console_scripts =
    dandi=dandi.cli.command:main

[flake8]
max-line-length = 100
#ignore = D100,D101,D102,D103,D104,D105,D200,D201,D202,D204,D205,D208,D209,D210,D300,D301,D400,D401,D403,E24,E121,E123,E126,E226,E266,E402,E704,E731,F821,I100,I101,I201,N802,N803,N804,N806,W503,W504,W605
ignore = E203,W503
exclude =
    *sphinx*
    dandi/externals/*
    .tox/
    _version.py
    versioneer.py
per-file-ignores =
    # The parse_dandi_url() docstring contains some long lines we can't do
    # anything about.
    dandi/dandiarchive.py:E501

[versioneer]
VCS = git
style = pep440
versionfile_source = dandi/_version.py
versionfile_build = dandi/_version.py
tag_prefix =
parentdir_prefix =

[codespell]
skip = dandi/_version.py,dandi/due.py,versioneer.py
# Don't warn about "[l]ist" in the abbrev_prompt() docstring:
# TE is present in the BIDS schema
ignore-regex = (\[\w\]\w+|TE)
exclude-file = .codespellignore

[mypy]
# TODO: Eventually uncomment these:
#allow_untyped_defs = False
#implicit_reexport = False
allow_incomplete_defs = False
ignore_missing_imports = True
no_implicit_optional = True
local_partial_types = True
pretty = True
show_error_codes = True
show_traceback = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
plugins = pydantic.mypy
exclude = _version\.py|due\.py

[mypy-dandi._version]
follow_imports = skip

[mypy-dandi.due]
follow_imports = skip

[mypy-ruamel.yaml]
implicit_reexport = True

[pydantic-mypy]
init_forbid_extra = True
warn_untypes_fields = True
